--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
     "multer": "^2.0.1",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "uuid": "^11.1.0"
   }
 }
